force-app/main/default/objects/Product2/fields/Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Accommodation__c</fullName>
    <label>Accommodation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Hostel</fullName>
            </value>
            <value>
                <fullName>Resort</fullName>
            </value>
            <value>
                <fullName>Cottage</fullName>
            </value>
            <value>
                <fullName>Airbnb</fullName>
            </value>
            <value>
                <fullName>Campsite</fullName>
            </value>
            <value>
                <fullName>Lodge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>