force-app/main/default/objects/Product2/fields/Cities__c.field-meta.xml
<CustomField>
    <fullName>Cities__c</fullName>
    <label>Cities</label>
    <length>100</length>
    <type>Text</type>
</CustomField>