force-app/main/default/objects/Product2/fields/Continent__c.field-meta.xml
<CustomField>
    <fullName>Continent__c</fullName>
    <label>Continent</label>
    <length>50</length>
    <type>Text</type>
</CustomField>