force-app/main/default/objects/Product2/fields/Coordinates__c.field-meta.xml
<CustomField>
    <fullName>Coordinates__c</fullName>
    <label>Coordinates</label>
    <type>TextArea</type>
</CustomField>