force-app/main/default/objects/Product2/fields/Current_Members__c.field-meta.xml
<CustomField>
    <fullName>Current_Members__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Current Members</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>