force-app/main/default/objects/Product2/fields/Current_Members_To_All__c.field-meta.xml
<CustomField>
    <fullName>Current_Members_To_All__c</fullName>
    <formula>TEXT(Current_Members__c) &amp; &quot; / &quot; &amp;  TEXT(Member_Limit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Members To All</label>
    <type>Text</type>
</CustomField>