force-app/main/default/objects/Product2/fields/Is_All_Inclusive__c.field-meta.xml
<CustomField>
    <fullName>Is_All_Inclusive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is All Inclusive</label>
    <type>Checkbox</type>
</CustomField>