force-app/main/default/objects/Product2/fields/Member_Limit__c.field-meta.xml
<CustomField>
    <fullName>Member_Limit__c</fullName>
    <label>Member Limit</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>