force-app/main/default/objects/Product2/fields/Spots_Left__c.field-meta.xml
<CustomField>
    <fullName>Spots_Left__c</fullName>
    <formula>Member_Limit__c -  Current_Members__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spots Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>