force-app/main/default/objects/Product2/fields/Transportation__c.field-meta.xml
<CustomField>
    <fullName>Transportation__c</fullName>
    <label>Transportation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not provided</fullName>
                <default>true</default>
                <label>Not provided</label>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Airplane</fullName>
            </value>
            <value>
                <fullName>Bike</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>