force-app/main/default/objects/Product2/fields/Trip_Start_End__c.field-meta.xml
<CustomField>
    <fullName>Trip_Start_End__c</fullName>
    <formula>TEXT(Start_Date__c) &amp; &quot; - &quot; &amp;  TEXT(End_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trip Start End</label>
    <type>Text</type>
</CustomField>