force-app/main/default/objects/Product2/validationRules/member_limit_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>member_limit_rule</fullName>
    <active>true</active>
    <errorConditionFormula>Current_Members__c  &gt;  Member_Limit__c</errorConditionFormula>
    <errorDisplayField>Current_Members__c</errorDisplayField>
    <errorMessage>This trip is already fully booked</errorMessage>
</ValidationRule>