force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>Continent__c</columns>
    <columns>Summary__c</columns>
    <columns>Is_All_Inclusive__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Coordinates__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>